@@ -156,7 +156,7 @@ public class MiniUtil {
     
     public static void openHelp() {
         try {
-            RiskUtil.openDocs("help/index.htm");
+            RiskUtil.openDocs("help/rules.htm");
         }
         catch(Exception e) {
             OptionPane.showMessageDialog(null,"Unable to open manual: "+e.getMessage(),"Error", OptionPane.ERROR_MESSAGE);
